@@ -35,19 +35,20 @@ public class MethodInvocation {
         nonInterned.internedMethod();   // should emit error
     }
 
-  // Now, test method parameters
-  void internedCharacterParameter(@Interned Character a) {
-  }
+    // Now, test method parameters
+    void internedCharacterParameter(@Interned Character a) {
+    }
 
-  void internedCharacterParametersClient() {
-    // TODO: auto-boxing from char to Character //:: (argument.type.incompatible)
-    internedCharacterParameter('ä');
-    // TODO: auto-boxing from char to Character //:: (argument.type.incompatible)
-    internedCharacterParameter('a');
-    //:: (argument.type.incompatible)
-    internedCharacterParameter(new Character('a'));
-    //:: (argument.type.incompatible)
-    internedCharacterParameter(Character.valueOf('a'));
-  }
+    // See http://code.google.com/p/checker-framework/issues/detail?id=84
+    void internedCharacterParametersClient() {
+        // TODO: auto-boxing from char to Character //:: (argument.type.incompatible)
+        internedCharacterParameter('\u00E4'); // lowercase a with umlaut
+        // TODO: auto-boxing from char to Character //:: (argument.type.incompatible)
+        internedCharacterParameter('a');
+        //:: (argument.type.incompatible)
+        internedCharacterParameter(new Character('a'));
+        //:: (argument.type.incompatible)
+        internedCharacterParameter(Character.valueOf('a'));
+    }
 
 }
